config/node-exporter.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: kube-system
  labels:
    k8s-app: node-exporter
spec:
  selector:
    matchLabels:
      k8s-app: node-exporter
  template:
    metadata:
      labels:
        k8s-app: node-exporter
    spec:
      containers:
      - image: registry.cn-beijing.aliyuncs.com/insights-ops/node-exporter:v1.8.0  
        name: node-exporter
        ports:
        - containerPort: 9100
          protocol: TCP
          name: http
        volumeMounts:
        - name: data
          mountPath: /host/data
          readOnly: true
      volumes:
      - name: data
        hostPath:
          path: /data
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: node-exporter
  name: node-exporter
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 9100
    nodePort: 31672
    protocol: TCP
  type: NodePort
  selector:
    k8s-app: node-exporter
